--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,8 @@ form button:hover {
   flex: 1;
 }
 
-.trash-btn,
-.complete-btn {
+.trash-button,
+.complete-button {
   background: #ff6f47;
   color: white;
   border: none;
@@ -83,7 +83,7 @@ form button:hover {
   font-size: 1rem;
 }
 
-.complete-btn {
+.complete-button {
   background: rgb(11, 212, 162);
 }
 
