--- a/src/index.css
+++ b/src/index.css
@@ -2,258 +2,282 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background: #24C6DC;
 }
 
-#root {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow-y: auto;
-  text-align: center;
-  background: linear-gradient(120deg, #2c3e50 0%, #3498db 100%);
-  color: white;
-  font-family: "Poppins", sans-serif;
+.input-group {
+  width: 50%;
 }
 
-h1 {
-  font-size: 2rem;
-  margin: 1em 0;
-}
-
-.form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.todo-input {
-  height: 3em;
-  width: 25em;
-  font-size: 1.2em;
-  padding-left: 1em;
-}
-
-form button {
-  height: 3em;
-  width: 2em;
-  font-size: 1.2em;
-  color: #ff6f47;
-  background: #f7fffe;
-  border: unset;
+.form-select {
   cursor: pointer;
-  transition: all 0.3s ease;
+  width: 50%;
 }
 
-form button:hover {
-  background: #ff6f47;
-  color: white;
+.list-group-item {
+  width: 40%;
 }
 
-.todo-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: left;
-}
-
-.todo-list {
-  min-width: 30%;
-  list-style: none;
-}
-
-.todo {
-  margin: 0.5rem;
-  background: white;
-  font-size: 1.5rem;
-  color: black;
-  display: flex;
-  width: 20rem;
-  justify-content: space-between;
-  align-items: center;
-  transition: all 1s ease;
-}
-
-button:active {
-  transform: translateY(0.1rem);
-}
-
-.trash-button,
-.complete-button,
-.edit-button {
-  background: #ff6f47;
-  color: white;
-  border: none;
-  padding: 1rem;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-.edit-button {
-  background-color: #525597;
-}
-
-.complete-button {
-  background: #0bd4a2;
-}
-
-.todo-text {
-  padding: 0rem 0.5rem;
-  flex: 1;
-}
-
-#inputMessage {
-  display: none;
-  text-align: center;
-  color: #000;
-}
-
-.fall {
-  transform: translateY(10rem) rotateZ(20deg);
-  opacity: 0;
-}
-
-.completed {
-  text-decoration: line-through;
-}
-
-.filter-todo {
-  padding: 1rem;
-  appearance: none;
-  outline: 0;
-  box-shadow: none;
-  background-image: none;
-  color: #ff6f47;
-  font-family: "Poppins", sans-serif;
-  cursor: pointer;
-  width: 12rem;
-}
-
-.select {
-  margin: 1rem;
-  position: relative;
-  overflow: hidden;
-}
-
-.select::after {
-  content: "\25BC";
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 1rem;
-  background: #ff6f47;
-  cursor: pointer;
-  pointer-events: none;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  background: #99999981;
-}
-
-.delete-modal {
-  position: fixed;
-  top: 20%;
-  z-index: 1;
-  background: #fff;
-  color: #000;
-  width: 25rem;
-  height: 10rem;
-  text-align: center;
-  font-size: 1.4rem;
-  padding: 1em;
-}
-
-.delete-modal button {
-  background: #ff6f47;
-  color: white;
-  border: none;
-  cursor: pointer;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  margin: auto 1em;
-  border-radius: 0.3rem;
-  font-weight: 600;
-}
-
-#deleteButton {
-  background: #0bd4a2;
-}
-
-.edit-modal form {
-  margin: 1em;
-}
-
-.edit-modal {
-  position: fixed;
-  top: 20%;
-  z-index: 1;
-  background: #fff;
-  color: #000;
-  width: 30rem;
-  height: 15rem;
-  font-size: 1.4rem;
-  padding: 1em;
-}
-
-.edit-modal input {
-  height: 2em;
-  width: 90%;
-  font-size: 1em;
-  padding-left: 1em;
-  border: 0.1rem solid #000;
-  background: #ff6f47de;
-}
-
-.edit-modal .form > button {
-  height: 2em;
-  font-size: 1em;
-}
-
-.edit-modal > div {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.edit-modal > div button {
-  color: #ff6f47;
-  border: none;
-  cursor: pointer;
-  width: 3rem;
-  height: 3rem;
-  font-size: 1rem;
-  border-radius: 2rem;
-  font-weight: 600;
-}
-
-.edit-modal p {
-  flex: 0.8;
-}
-
-@media screen and (max-width: 768px) {
-  .form {
-    flex-direction: column-reverse;
-    margin-bottom: 1em;
+@media screen and (max-width: 645px) {
+  .input-group {
+    width: 95%;
   }
 
-  .edit-modal form {
-    flex-direction: row;
+  .form-select {
+    width: 95%;
   }
 }
 
-@media screen and (max-width: 520px) {
-  .form > div:first-child {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-  }
+/*#root {*/
+/*  position: absolute;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  overflow-y: auto;*/
+/*  text-align: center;*/
+/*  background: linear-gradient(120deg, #2c3e50 0%, #3498db 100%);*/
+/*  color: white;*/
+/*  font-family: "Poppins", sans-serif;*/
+/*}*/
 
-  .edit-modal {
-    width: 100%;
-  }
-}
+/*h1 {*/
+/*  font-size: 2rem;*/
+/*  margin: 1em 0;*/
+/*}*/
+
+/*.form {*/
+/*  display: flex;*/
+/*  justify-content: center;*/
+/*  align-items: center;*/
+/*}*/
+
+/*.todo-input {*/
+/*  height: 3em;*/
+/*  width: 25em;*/
+/*  font-size: 1.2em;*/
+/*  padding-left: 1em;*/
+/*}*/
+
+/*form button {*/
+/*  height: 3em;*/
+/*  width: 2em;*/
+/*  font-size: 1.2em;*/
+/*  color: #ff6f47;*/
+/*  background: #f7fffe;*/
+/*  border: unset;*/
+/*  cursor: pointer;*/
+/*  transition: all 0.3s ease;*/
+/*}*/
+
+/*form button:hover {*/
+/*  background: #ff6f47;*/
+/*  color: white;*/
+/*}*/
+
+/*.todo-container {*/
+/*  display: flex;*/
+/*  justify-content: center;*/
+/*  align-items: center;*/
+/*  text-align: left;*/
+/*}*/
+
+/*.todo-list {*/
+/*  min-width: 30%;*/
+/*  list-style: none;*/
+/*}*/
+
+/*.todo {*/
+/*  margin: 0.5rem;*/
+/*  background: white;*/
+/*  font-size: 1.5rem;*/
+/*  color: black;*/
+/*  display: flex;*/
+/*  width: 20rem;*/
+/*  justify-content: space-between;*/
+/*  align-items: center;*/
+/*  transition: all 1s ease;*/
+/*}*/
+
+/*button:active {*/
+/*  transform: translateY(0.1rem);*/
+/*}*/
+
+/*.trash-button,*/
+/*.complete-button,*/
+/*.edit-button {*/
+/*  background: #ff6f47;*/
+/*  color: white;*/
+/*  border: none;*/
+/*  padding: 1rem;*/
+/*  cursor: pointer;*/
+/*  font-size: 1rem;*/
+/*}*/
+
+/*.edit-button {*/
+/*  background-color: #525597;*/
+/*}*/
+
+/*.complete-button {*/
+/*  background: #0bd4a2;*/
+/*}*/
+
+/*.todo-text {*/
+/*  padding: 0rem 0.5rem;*/
+/*  flex: 1;*/
+/*}*/
+
+/*#inputMessage {*/
+/*  display: none;*/
+/*  text-align: center;*/
+/*  color: #000;*/
+/*}*/
+
+/*.fall {*/
+/*  transform: translateY(10rem) rotateZ(20deg);*/
+/*  opacity: 0;*/
+/*}*/
+
+/*.completed {*/
+/*  text-decoration: line-through;*/
+/*}*/
+
+/*.filter-todo {*/
+/*  padding: 1rem;*/
+/*  appearance: none;*/
+/*  outline: 0;*/
+/*  box-shadow: none;*/
+/*  background-image: none;*/
+/*  color: #ff6f47;*/
+/*  font-family: "Poppins", sans-serif;*/
+/*  cursor: pointer;*/
+/*  width: 12rem;*/
+/*}*/
+
+/*.select {*/
+/*  margin: 1rem;*/
+/*  position: relative;*/
+/*  overflow: hidden;*/
+/*}*/
+
+/*.select::after {*/
+/*  content: "\25BC";*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  right: 0;*/
+/*  padding: 1rem;*/
+/*  background: #ff6f47;*/
+/*  cursor: pointer;*/
+/*  pointer-events: none;*/
+/*}*/
+
+/*.overlay {*/
+/*  position: fixed;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  z-index: 1;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  background: #99999981;*/
+/*}*/
+
+/*.delete-modal {*/
+/*  position: fixed;*/
+/*  top: 20%;*/
+/*  z-index: 1;*/
+/*  background: #fff;*/
+/*  color: #000;*/
+/*  width: 25rem;*/
+/*  height: 10rem;*/
+/*  text-align: center;*/
+/*  font-size: 1.4rem;*/
+/*  padding: 1em;*/
+/*}*/
+
+/*.delete-modal button {*/
+/*  background: #ff6f47;*/
+/*  color: white;*/
+/*  border: none;*/
+/*  cursor: pointer;*/
+/*  padding: 0.5rem 1rem;*/
+/*  font-size: 1rem;*/
+/*  margin: auto 1em;*/
+/*  border-radius: 0.3rem;*/
+/*  font-weight: 600;*/
+/*}*/
+
+/*#deleteButton {*/
+/*  background: #0bd4a2;*/
+/*}*/
+
+/*.edit-modal form {*/
+/*  margin: 1em;*/
+/*}*/
+
+/*.edit-modal {*/
+/*  position: fixed;*/
+/*  top: 20%;*/
+/*  z-index: 1;*/
+/*  background: #fff;*/
+/*  color: #000;*/
+/*  width: 30rem;*/
+/*  height: 15rem;*/
+/*  font-size: 1.4rem;*/
+/*  padding: 1em;*/
+/*}*/
+
+/*.edit-modal input {*/
+/*  height: 2em;*/
+/*  width: 90%;*/
+/*  font-size: 1em;*/
+/*  padding-left: 1em;*/
+/*  border: 0.1rem solid #000;*/
+/*  background: #ff6f47de;*/
+/*}*/
+
+/*.edit-modal .form > button {*/
+/*  height: 2em;*/
+/*  font-size: 1em;*/
+/*}*/
+
+/*.edit-modal > div {*/
+/*  display: flex;*/
+/*  align-items: center;*/
+/*  justify-content: space-between;*/
+/*}*/
+
+/*.edit-modal > div button {*/
+/*  color: #ff6f47;*/
+/*  border: none;*/
+/*  cursor: pointer;*/
+/*  width: 3rem;*/
+/*  height: 3rem;*/
+/*  font-size: 1rem;*/
+/*  border-radius: 2rem;*/
+/*  font-weight: 600;*/
+/*}*/
+
+/*.edit-modal p {*/
+/*  flex: 0.8;*/
+/*}*/
+
+/*@media screen and (max-width: 768px) {*/
+/*  .form {*/
+/*    flex-direction: column-reverse;*/
+/*    margin-bottom: 1em;*/
+/*  }*/
+
+/*  .edit-modal form {*/
+/*    flex-direction: row;*/
+/*  }*/
+/*}*/
+
+/*@media screen and (max-width: 520px) {*/
+/*  .form > div:first-child {*/
+/*    width: 90%;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*  }*/
+
+/*  .edit-modal {*/
+/*    width: 100%;*/
+/*  }*/
+/*}*/
