--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 }
 
 .dark {
-  background: #0c0c18;
+  background: #212121;
   color: #fff;
 }
 
@@ -13,6 +13,12 @@
 
 .start-button {
   width: 15em;
+}
+
+.add-button {
+  background: #004be5;
+  border: 1px solid #0d6efd;
+  padding: 0.375em 0.8em;
 }
 
 .form-wrapper {
@@ -58,15 +64,22 @@ button:active {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #18181882;
+  background: #00000082;
 }
 
 .edit-modal,
 .delete-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 50%;
-  margin: 6em auto;
   height: 10.5em;
-  background: #8ad1f8;
+  background: #d076ea;
+}
+
+.dark .edit-modal {
+  background: #864694;
 }
 
 .toaster {
