--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 }
 
 .dark {
-  background: #212121;
+  background: #282C34;
   color: #fff;
 }
 
@@ -15,10 +15,8 @@
   width: 15em;
 }
 
-.add-button {
+.dark .add-button {
   background: #004be5;
-  border: 1px solid #0d6efd;
-  padding: 0.375em 0.8em;
 }
 
 .form-wrapper {
@@ -65,6 +63,7 @@ button:active {
   width: 100%;
   height: 100%;
   background: #00000082;
+  z-index: 2;
 }
 
 .edit-modal,
@@ -75,11 +74,12 @@ button:active {
   transform: translate(-50%, -50%);
   width: 50%;
   height: 10.5em;
-  background: #d076ea;
+  background: #8ad1f8;
+  z-index: 2;
 }
 
 .dark .edit-modal {
-  background: #864694;
+  background: #57839b;
 }
 
 .toaster {
